updated env config

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 NODE_ENV=production
 
-CORS=https://deskbird-challenge-api.onrender.com
+CORS=https://deskbird-challenge-api.onrender.com,https://deskbird-challenge.netlify.app
 
 GITHUB_CLIENT_ID=f6f45d3c17d455491d8a8ba36ef1158a405385cd
 GITHUB_CALLBACK_URL=https://deskbird-challenge-api.onrender.com/api/auth/github/callback
