--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,16 @@ services:
     container_name: deskbird-challenge-postgres
     restart: always
     environment:
+      
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: deskbird_challenge_dev
       DATABASE_HOST: postgres
     ports:
       - "5432:5432"
+    networks:
+      - dev-network
+
+networks:
+  dev-network:
+    driver: bridge
